--- a/tokens/tokens.css
+++ b/tokens/tokens.css
@@ -35,23 +35,106 @@
 
 @supports (color: color(display-p3 1 1 1)) {
   :root {
-    --color-base-blue-50: color(display-p3 0.6549019607843137 0.8862745098039215 1);
-    --color-base-blue-100: color(display-p3 0.5372549019607843 0.7686274509803922 0.9803921568627451);
-    --color-base-blue-200: color(display-p3 0.4196078431372549 0.6509803921568628 0.8627450980392157);
-    --color-base-gray-50: color(display-p3 0.07058823529411765 0.07058823529411765 0.07058823529411765);
-    --color-base-green-50: color(display-p3 0.5411764705882353 0.6862745098039216 0.7294117647058823);
-    --color-base-green-100: color(display-p3 0.4235294117647059 0.5686274509803921 0.611764705882353);
-    --color-base-green-200: color(display-p3 0.3058823529411765 0.45098039215686275 0.49411764705882355);
-    --color-base-purple-50: color(display-p3 0.9411764705882353 0.8156862745098039 1);
-    --color-base-purple-100: color(display-p3 0.8235294117647058 0.6980392156862745 0.9725490196078431);
-    --color-base-purple-200: color(display-p3 0.7058823529411765 0.5803921568627451 0.8549019607843137);
-    --color-base-red-50: color(display-p3 1 0.6549019607843137 0.6549019607843137);
-    --color-base-red-100: color(display-p3 0.9803921568627451 0.5372549019607843 0.5372549019607843);
-    --color-base-red-200: color(display-p3 0.8627450980392157 0.4196078431372549 0.4196078431372549);
+    --color-base-blue-50: color(
+      display-p3 0.6549019607843137 0.8862745098039215 1
+    );
+    --color-base-blue-100: color(
+      display-p3 0.5372549019607843 0.7686274509803922 0.9803921568627451
+    );
+    --color-base-blue-200: color(
+      display-p3 0.4196078431372549 0.6509803921568628 0.8627450980392157
+    );
+    --color-base-gray-50: color(
+      display-p3 0.07058823529411765 0.07058823529411765 0.07058823529411765
+    );
+    --color-base-green-50: color(
+      display-p3 0.5411764705882353 0.6862745098039216 0.7294117647058823
+    );
+    --color-base-green-100: color(
+      display-p3 0.4235294117647059 0.5686274509803921 0.611764705882353
+    );
+    --color-base-green-200: color(
+      display-p3 0.3058823529411765 0.45098039215686275 0.49411764705882355
+    );
+    --color-base-purple-50: color(
+      display-p3 0.9411764705882353 0.8156862745098039 1
+    );
+    --color-base-purple-100: color(
+      display-p3 0.8235294117647058 0.6980392156862745 0.9725490196078431
+    );
+    --color-base-purple-200: color(
+      display-p3 0.7058823529411765 0.5803921568627451 0.8549019607843137
+    );
+    --color-base-red-50: color(
+      display-p3 1 0.6549019607843137 0.6549019607843137
+    );
+    --color-base-red-100: color(
+      display-p3 0.9803921568627451 0.5372549019607843 0.5372549019607843
+    );
+    --color-base-red-200: color(
+      display-p3 0.8627450980392157 0.4196078431372549 0.4196078431372549
+    );
     --color-base-white-50: color(display-p3 1 1 1);
-    --color-base-yellow-50: color(display-p3 1 0.9411764705882353 0.4117647058823529);
-    --color-base-yellow-100: color(display-p3 0.9568627450980393 0.8235294117647058 0.29411764705882354);
-    --color-base-yellow-200: color(display-p3 0.8392156862745098 0.7058823529411765 0.17647058823529413);
+    --color-base-yellow-50: color(
+      display-p3 1 0.9411764705882353 0.4117647058823529
+    );
+    --color-base-yellow-100: color(
+      display-p3 0.9568627450980393 0.8235294117647058 0.29411764705882354
+    );
+    --color-base-yellow-200: color(
+      display-p3 0.8392156862745098 0.7058823529411765 0.17647058823529413
+    );
   }
 }
 
+.bg-blue-50 {
+  background-color: var(--color-base-blue-50);
+}
+.bg-blue-100 {
+  background-color: var(--color-base-blue-100);
+}
+.bg-blue-200 {
+  background-color: var(--color-base-blue-200);
+}
+.bg-gray-50 {
+  background-color: var(--color-base-gray-50);
+}
+.bg-green-50 {
+  background-color: var(--color-base-green-50);
+}
+.bg-green-100 {
+  background-color: var(--color-base-green-100);
+}
+.bg-green-200 {
+  background-color: var(--color-base-green-200);
+}
+.bg-purple-50 {
+  background-color: var(--color-base-purple-50);
+}
+.bg-purple-100 {
+  background-color: var(--color-base-purple-100);
+}
+.bg-purple-200 {
+  background-color: var(--color-base-purple-200);
+}
+.bg-red-50 {
+  background-color: var(--color-base-red-50);
+}
+.bg-red-100 {
+  background-color: var(--color-base-red-100);
+}
+.bg-red-200 {
+  background-color: var(--color-base-red-200);
+}
+.bg-white-50 {
+  background-color: var(--color-base-white-50);
+}
+.bg-yellow-50 {
+  background-color: var(--color-base-yellow-50);
+}
+.bg-yellow-100 {
+  background-color: var(--color-base-yellow-100);
+}
+.bg-yellow-200 {
+  background-color: var(--color-base-yellow-200);
+}
